--- a/newexperiences.html
+++ b/newexperiences.html
@@ -94,14 +94,14 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-12">
-            <img src="img/blog/florian-olivo-4hbJ-eymZ1o-unsplash.jpg" alt="Codes" class="img-responsive" width="800"
+            <img src="img/blog/estee-janssens-aQfhbxailCs-unsplash.jpg" alt="Codes" class="img-responsive" width="800"
                 style="display: block; margin: 0 auto;" />
             <div class="h-30"></div>
         </div>
 
         <div class="col-md-12">
             <h3 class="text-uppercase">New Experiences</h3>
-            <h5><em> 25th March 2021</em></h5>
+            <h5><em> 25th June 2021</em></h5>
             <div class="h-30"></div>
         </div>
 
@@ -109,7 +109,7 @@
 
             <section>
                 <p>
-                    I've had so much going on that I don’t even know how to write my experiences. So I thought let me
+                    I've had so much going on that I don’t even know how to start. So I thought let me
                     just type and let the words flow and I’m sure once I get going I’ll have something solid to share
                     with you guys.
                     My last post was on my experience with Chingu (which again was amazing). So what have I done since
@@ -119,42 +119,86 @@
                 <h4>Job Hunting</h4>
                 <p>
                     With the job hunting, I took a small break in the job hunting whilst doing the Chingu experience.
-                    Although I was building the skills and knowledge, I didn’t have the commercial experience that I
+                    Although I was building the skills and knowledge, I felt I did not have enough experience that I
                     needed based on previous job applications and that was the main reason in stopping the job hunting.
                     So after the Chingu experience, I resumed job hunting, expanding my search and including junior full
                     stack engineers just because I felt I was capable of doing such a role. So now knowing which roles I
-                    wanted to apply for, I really revamped my CV and LinkedIn profile to really show my projects, as I
-                    wanted to show more of my projects as I was lacking in the experiences section. I am part of the
+                    wanted to apply for, I really revamped my CV, LinkedIn and Github profile to really show my
+                    projects, as I
+                    more projects than relevant experiences. I am part of the
                     Coding Black Females community and so I reached out on Slack for anyone that could potentially help
                     me with my CV and LinkedIn profile and found someone amazing that really took their time with me in
-                    explaining different elements I needed for my resume. That advice alone pretty much boosted my
+                    explaining different elements I needed for my CV. That advice alone pretty much boosted my
                     confidence but it also allowed me to show that I was capable of the jobs that I was applying for.
                     <br><br>
-                    I am taking a different approach to how I am applying for these roles. Before, I mentioned in videos
+                    I am now taking a different approach to how I am applying for these roles. Before, I mentioned in
+                    videos
                     that I have done and blog posts, that a lot of these companies are looking for "junior" roles that
                     require you to have at least three years commercial experiences plus a computer degree, and it
                     already stopped me from even applying and even reading the rest of the job description. Now, I fully
                     look through the job description and I feel if I can do at least three (three being my minimum) of
                     the
-                    criteria that they are asking for, I'm applying even if I'm lacking in experience, I'm applying.
+                    criteria that they are asking for, I'm applying even if I'm lacking in experience....I'm applying.
                     Along with this new approach and trying to stay organised, I've developed a spreadsheet and pretty
-                    much noting what jobs I've applied for, if it is directly on company website or through recruiters,
+                    much noting down what jobs I've applied for, if it is directly on the company's website or through
+                    recruiters,
                     the date of when I applied, follow-up-dates and if I've been successful etc. It allows me to see
-                    that I'm applying for jobs but also me accountable in a way.
+                    that I'm applying for jobs but also holds me accountable in a way.
                 </p>
 
                 <h4>Freelancing</h4>
                 <p>
-                    So I have been looking to freelance, although I wasn't sure as to where to start. I have been following a
+                    So I have been looking to freelance, although I wasn't sure as to where to start. I have been
+                    following a
                     few people on Twitter who 100% campaign (not sure if campaign is the right word) for freelancing and
-                    give helpful tips on freelancing and the way to go about it. 
+                    give helpful tips on freelancing and the way to go about it.
                     Freelancing for me, I believe would really help with the lack of commercial experience that I have.
                     I believe it will help me with working with clients, working with a set of requirements, working
                     towards a deadline to name a few. <br>
                     So I started pretty much researching pricing, what would the average junior web developer be
-                    charging. In terms of pricing, I haven’t figured it out all the way but I do have some sort of idea
-                    just based on freelancing jobs that I have done so far.<br>
-                    I've now been doing it for a few months, really trying to promote myself and getting these clien
+                    charging and the process from start to finish. In terms of pricing, I haven’t figured it out all the
+                    way but I do have some sort of idea
+                    just based on freelancing jobs that I have done so far. I have figured out my process from when
+                    first enquiry of my services until the end when the client gets their "outcome" so to speak. I am
+                    definitely learning as I go along, seeing what works for me and also for the client as well and
+                    really adjust in making it as smooth as possible.<br>
+                    I've now been doing it for a few months, really trying to promote myself and getting these
+                    clients...so stay tuned!
+                </p>
+
+                <h4>Social Presence</h4>
+                <p>
+
+                    Based on advice, social media is pretty much a powerful tool to really get yourself out there and
+                    for even potential recruiters to see how active you are.
+                    In terms of Instagram and Facebook, I’ve been somewhat active in promoting what I do and also trying
+                    to engage with other people.
+                    I recently discovered that LinkedIn is a goldmine for recruiters looking for their perfect
+                    candidates. What I was told was that by continuously being active on LinkedIn it allows them to see
+                    that you are being constant, attending virtual events etc . It shows them that you are
+                    really interested in the job role that you want and you are continuously gaining information and
+                    also at the same time sharpening your skills.
+                </p>
+
+                <h4>Code First Girls</h4>
+                <p>
+                    I started “Introduction to Web Development” in conjunction with Natwest on the 20th May and it's
+                    every week
+                    for at least 2 hours. I did the first session and I actually wanted to withdraw from the course only
+                    because I pretty much knew the basics of HTML/CSS but then I decided I wanted to continue until the
+                    end and I’m glad I did.
+                    I am learning new things and I am working in a team for the group project which is
+                    pretty exciting. My team is amazing, all skillsets and the project idea that we came up with is
+                    great and with the
+                    different job backgrounds and knowledge that we have, it really ties in well with the project and I
+                    can’t wait to show you guys the end results.
+                </p>
+
+                <p>
+                    So these are the four main things that I have been putting my focus on, really trying to really
+                    commit myself to each one of these points that I have mentioned above. As it is the experience that
+                    I am really focusing on, I am really using these four areas to really bridge to make myself stronger
+                    in a way.
 
                 </p>
             </section>
