--- a/blog.html
+++ b/blog.html
@@ -97,6 +97,39 @@
         <h1> Blog</h1>
         <div class="blog-wrapper">
 
+
+            <div class="box">
+
+                <blockquote>
+                    &ldquo;Never give up hope. All things are working for your good. One day, you’ll look back on
+                    everything you’ve been through and thank God for it.&rdquo;
+                    <figcaption><em>Germany Kent</em></figcaption>
+                </blockquote>
+
+            </div>
+
+            <div class="box">
+
+                <img src="/img/blog/estee-janssens-aQfhbxailCs-unsplash.jpg" alt="Planner">
+                <h2>New Experiences</h2><br>
+
+                <p>I've had so much going on that I don’t even know how to start. So I thought let me
+                    just type and let the words flow .... </p>
+                <a href="newexperiences.html">Read More</a>
+            </div>
+
+            <div class="box">
+
+                <blockquote>
+                    &ldquo;If you lay down, people will step over you. But if you keep scrambling, if you keep going,
+                    someone will always, always give you a hand. Always. But you gotta keep dancing, you gotta keep your
+                    feet moving.&rdquo;
+                    <figcaption><em>Morgan Freeman</em></figcaption>
+                </blockquote>
+
+            </div>
+
+
             <div class="box">
 
                 <blockquote>
@@ -117,7 +150,7 @@
                 <a href="chingupart2.html">Read More</a>
             </div>
 
-     
+
 
 
             <div class="box">
