--- a/services.html
+++ b/services.html
@@ -140,7 +140,8 @@
 
 
         <div class="hero">
-            <h1 style="text-transform: capitalize;">Our Clients.. </h1>
+            <hr>
+            <h1 style="text-transform: capitalize;">Our Clients... </h1>
 
             <div class="review-box">
                 <div id="slide">
@@ -166,7 +167,7 @@
 
                     <div class="card">
                         <div class="profile">
-                            <img src="img/testi/sos.png" alt="">
+                            <img src="img/testi/sosnew.png" alt="">
                             <div>
                                 <h3>SOS Security</h3>
                                 <!-- <p>Web Developer</p> -->
@@ -180,7 +181,7 @@
                         </p>
                     </div>
 
-                    <div class="card">
+                    <!-- <div class="card">
                         <div class="profile">
                             <img src="img/IMG_1729.jpg" alt="">
                             <div>
@@ -206,7 +207,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptates qui nam corrupti
                             quod architecto quisquam, at, deserunt non repellat accusamus nulla soluta nihil tempore
                             aliquid placeat mollitia sit amet?</p>
-                    </div>
+                    </div> -->
 
 
                 </div>
@@ -231,7 +232,7 @@
         let x = 0;
 
         upArrow.onclick = function () {
-            if (x > "-900") {
+            if (x > "-300") {           //"-900" or more for other comments
                 x = x - 300;
                 slide.style.top = x + "px";
             }
