--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                     <span class="box-words-wrapper">
 
 
-                        <b class="is-visible">coding.</b>
-                        <b>&nbsp;blogging.</b>
+                        <b class="is-visible">coder.</b>
+                        <b>&nbsp;blogger.</b>
                         <b>tech.</b>
+                        <b>freelancer.</b>
                     </span>
                 </h1>
                 <!--<h5>taking you on my journey</h5>-->
