--- a/about.html
+++ b/about.html
@@ -65,6 +65,7 @@
                 <li><a href="portfolio.html">portfolio</a></li>
                 <li><a href="blog.html">blog</a></li>
                 <li><a href="about.html">About me</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">contact me</a></li>
 
                 <li class="box-label">Follow me</li>
