--- a/movieapp.html
+++ b/movieapp.html
@@ -64,6 +64,7 @@
                 <li><a href="portfolio.html">portfolio</a></li>
                 <li><a href="blog.html">blog</a></li>
                 <li><a href="about.html">About me</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">contact me</a></li>
 
 
