--- a/starterkit.html
+++ b/starterkit.html
@@ -60,10 +60,11 @@
         <nav>
             <ul class="box-primary-nav">
 
-                <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">portfolio</a></li>
                 <li><a href="blog.html">blog</a></li>
                 <li><a href="about.html">About me</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">contact me</a></li>
 
 
