--- a/contact.html
+++ b/contact.html
@@ -93,23 +93,23 @@
     <!-- main-container -->
     <div class="container main-container">
         <div class="col-md-6">
-            <form action="contactform.php" method="POST">
+            <form action="mailto:info@estherboateng.co.uk" method="post" enctype="text/plain">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="name" autocomplete="off">
+                            <input type="text" name="name" autocomplete="off" required>
                             <span>your name</span>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="input-contact">
-                            <input type="text" name="email" autocomplete="off">
+                            <input type="text" name="email" autocomplete="off" required>
                             <span>your email</span>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="input-contact">
-                            <input type="text" name="object" autocomplete="off">
+                            <input type="text" name="object" autocomplete="off" required>
                             <span>Subject</span>
                         </div>
                     </div>
